welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: ')' expected but 'if' found.
    if (detrompeur==1){
    ^